--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.6.0",
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native": "0.73.1",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.4",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-redash": "^18.1.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-share": "^10.0.2",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^5.0.0"
   },
