--- a/package.json
+++ b/package.json
@@ -21,12 +21,21 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "expo": "~49.0.15",
+    "expo-device": "^5.6.0",
+    "expo-file-system": "~15.4.5",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "mongodb": "^6.3.0",
     "react": "18.2.0",
     "react-native": "0.73.1",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.4",
     "react-native-reanimated": "~3.3.0",
@@ -35,7 +44,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-share": "^10.0.2",
     "react-native-vector-icons": "^10.0.3",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
