--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.6.0",
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
@@ -21,7 +21,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "expo": "~49.0.15",
-    "expo-device": "^5.6.0",
+    "expo-device": "~5.4.0",
     "expo-file-system": "~15.4.5",
     "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
@@ -31,7 +31,7 @@
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.3.0",
     "react": "18.2.0",
-    "react-native": "0.73.1",
+    "react-native": "0.72.6",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
