--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongodb": "^6.3.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-actions-sheet": "^0.9.0-alpha.24",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
